@@ -27,6 +27,12 @@ our $FILE_TO_SUBS  = {};
 our $FILE_TO_MTIME = {};
 
 
+sub sillyness
+{
+    + $Petal::INPUT && $Petal::OUTPUT;
+}
+
+
 =head1 METHODS
 
 All the methods are static methods.
@@ -42,8 +48,9 @@ sub get
 {
     my $class = shift;
     my $file  = shift;
+    my $key = $class->compute_key ($file);
     my $data  = shift;
-    return $FILE_TO_SUBS->{$file} if ($class->is_ok ($file));
+    return $FILE_TO_SUBS->{$key} if ($class->is_ok ($file));
     return;
 }
 
@@ -57,9 +64,10 @@ sub set
 {
     my $class = shift;
     my $file  = shift;
+    my $key = $class->compute_key ($file);
     my $code  = shift;
-    $FILE_TO_SUBS->{$file} = $code;
-    $FILE_TO_MTIME->{$file} = $class->current_mtime ($file);
+    $FILE_TO_SUBS->{$key} = $code;
+    $FILE_TO_MTIME->{$key} = $class->current_mtime ($file);
 }
 
 
@@ -72,7 +80,8 @@ sub is_ok
 {
     my $class = shift;
     my $file  = shift;
-    return unless (defined $FILE_TO_SUBS->{$file});
+    my $key = $class->compute_key ($file);
+    return unless (defined $FILE_TO_SUBS->{$key});
     
     my $cached_mtime = $class->cached_mtime ($file);
     my $current_mtime = $class->current_mtime ($file);
@@ -90,7 +99,8 @@ sub cached_mtime
 {
     my $class = shift;
     my $file = shift;
-    return $FILE_TO_MTIME->{$file};
+    my $key = $class->compute_key ($file);
+    return $FILE_TO_MTIME->{$key};
 }
 
 
@@ -105,6 +115,23 @@ sub current_mtime
     my $file = shift;
     my $mtime = (stat($file))[9];
     return $mtime;
+}
+
+
+=head2 $class->compute_key ($file);
+
+Computes a cache 'key' for $file, which should be unique.
+(Well, currently an MD5 checksum is used, which is not
+*exactly* unique but which should be good enough)
+
+=cut
+sub compute_key
+{
+    my $class = shift;
+    my $file = shift;
+    
+    my $key = $file . ";INPUT=" . $Petal::INPUT . ";OUTPUT=" . $Petal::OUTPUT;
+    return $key;
 }
 
 
